# openpost-backend

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20230513105414_init.down.sql  20230513105414_init.up.sql
src/: config.rs  error.rs  handler.rs  jwt_auth.rs  main.rs  model.rs  response.rs  route.rs
src/components/: auth.rs  handler.rs  jwt_auth.rs  mod.rs  response.rs  route.rs  server.rs
src/components/handler/: auth_handlers.rs  mod.rs  post_handlers.rs  user_handlers.rs
src/components/handlers/: mod.rs  user_handlers.rs
src/components/model/: mod.rs  response.rs  structure.rs
src/lib/: handler.rs  jwt_auth.rs  model.rs  response.rs  route.rs  server.rs
tests/: login.rs
web/: index.html
