[package]
name = "openpost_backend"
version = "0.1.0"
edition = "2021"


[dependencies]
argon2 = { features = ["alloc", "rand"], default-features = false, version = "0.5.0" }
axum = { features = ["json", "query", "http1", "tokio"], default-features = false, version = "0.6.18" }
axum-extra = { version = "0.7.4", features = ["cookie"] }
chrono = { version = "0.4.24", features = ["serde"], default-features = false }
dotenv = "0.15.0"
time = { default-features = false, version = "0.3.21" }
jsonwebtoken = { default-features = false, version = "8.3.0" }
rand_core = { version = "0.6.4", default-features = false }
serde = { version = "1.0.163", default-features = false }
serde_json = { default-features = false, version = "1.0.96" }
sqlx = { version = "0.6.3", features = ["uuid", "chrono", "macros", "runtime-async-std-native-tls", "mysql"], default-features = false }
tokio = { version = "1.28.1", features = ["full"], default-features = false }
tower-http = { version = "0.4.0", features = ["cors", "fs"] }
uuid = { version = "1.3.2", features = ["serde"], default-features = false }
tracing = { default-features = false, version = "0.1.37" }
tracing-subscriber = { features = ["ansi"], default-features = false, version = "0.3.17" }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"

[profile.release]
lto = false
panic = "abort"
opt-level = "s"
codegen-units = 1
debug = false
strip = true
